--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Andrea Thiel",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
